--- a/index_infome.tex
+++ b/index_infome.tex
@@ -20,7 +20,7 @@
 \begin{document}
 		
 		\begin{center}
-			\huge \textbf{Metodología Bill Inmon vs Metodología de Kimball} 
+			\huge \textbf{Sistema de Recomendacion: Airbnb} 
 		\end{center}
 		\vspace{\baselineskip}
 		\begin{center}
@@ -66,12 +66,13 @@
 		\textbf{\textit{\large Abstract}}\rule[1.5mm]{5mm}{0.1mm} 		
 		\textit{
 			A recommendation system is an intelligent system that provides users with a series of personalized suggestions (recommendations) about a certain type of elements (items). The recommendation systems study the characteristics of each user and through a processing of the data, find a subset of items that may be of interest to the user.
-			In recent years and mainly due to the overload of information that we have on the Internet, recommendation systems have proliferated, which provide users, information, products, etc. that may be of interest to the user, after conducting a "study "of your profile, your taste and even the way in which the user browses the internet.			
+			In recent years and mainly due to the overload of information that we have on the Internet, recommendation systems have proliferated, which provide users, information, products, etc. that may be of interest to the user, after conducting a "study "of your profile, your taste and even the way in which the user browses the internet.	
+			\vspace{\baselineskip}			
 		 }				
-						
-		\rule{167mm}{0.1mm}
+					
+		\rule{150mm}{0.1mm}
 		
-		\vspace{\baselineskip}
+		\newpage
 		
 		\section{INTRODUCCION}
 		Los sistemas de recomendación pueden definirse como herramientas diseñadas para interactuar con conjuntos de información grandes y complejos con la finalidad de proporcionar al usuario información o ítems que sean de su interés, todo ello de forma automatizada. Su funcionamiento se basa en el empleo de métodos matemáticos y estadísticos capaces de explotar la información previamente almacenada y crear recomendaciones adaptadas a cada usuario. En la actualidad, los sistemas de recomendación son una tecnología implementada en la mayoría de plataformas online como Amazon, Neflix, eBay… ya que han dado muy buenos resultados incrementando las ventas. También están presentes en muchos otros ámbitos, por ejemplo, el de las noticias, mostrando al usuario información que le interesa de forma rápida. La mayoría de sistemas de recomendación se pueden clasificar en tres grupos: basados en contenido, filtrado colaborativos y mixtos (combinación de los dos anteriores).\\
